--- a/about.qmd
+++ b/about.qmd
@@ -2,12 +2,79 @@
 title: 'About'
 permalink: /about/
 comments: false
+about: 
+  id: about
+  template: solana
+  image: assets/logo/favicon-96x96.png
+  image-shape: rounded
+  links: 
+    - icon: globe
+      text: Predictive Ecology Blog
+      href: https://predictiveecology.org/
+    - icon: github
+      text: GitHub
+      href: https://github.com/PredictiveEcology
+listing: 
+  - id: current-personnel
+    contents: 
+      - bios/tati.qmd
+      - bios/ana.qmd
+      - bios/isolde.qmd
+      - bios/genevieve.qmd
+    sort: 
+      - "name"
+    fields: [image, title, description]
+    max-description-length: 1000000
+    image-height: 250px
+    image-align: left
+    sort-ui: false
+    filter-ui: false
+    categories: false
+    feed: false
+    page-size: 100
+  - id: research-professional
+    contents:
+      - bios/ian.qmd
+    sort: 
+      - "name"
+    fields: [image, title, description]
+    max-description-length: 1000000
+    image-height: 250px
+    image-align: left
+    sort-ui: false
+    filter-ui: false
+    categories: false
+    feed: false
+    page-size: 100
+  - id: former-personnel
+    contents:
+      - bios/ceres.qmd
+      - bios/frances.qmd
+      - bios/alex.qmd
+      - bios/alana.qmd
+      - bios/yong.qmd
+      - bios/jean.qmd
+      - bios/josh.qmd
+      - bios/sarah.qmd
+      - bios/sebastien.qmd
+      - bios/mario.qmd
+    sort: 
+      - "name"
+    fields: [image, title, description]
+    max-description-length: 1000000
+    image-height: 250px
+    image-align: left
+    sort-ui: false
+    filter-ui: false
+    categories: false
+    feed: false
+    page-size: 100
 ---
 
+:::{#about}
 ### Predictive Ecology Community
 
-We are located in Victoria, British Columbia, Canada, at the Pacific Forestry Centre.
-Several lab members are students through Université Laval and are based out of Québec City.
+We are located in Victoria, British Columbia, Canada, at the Pacific Forestry Centre. Several lab members are students through Université Laval and are based out of Québec City.
 
 #### Eliot McIntire
 
@@ -18,60 +85,23 @@ Several lab members are students through Université Laval and are based out of 
 **Research Scientist, [Natural Resources Canada](www.nrcan.gc.ca/home)**\
 **Adjunct Professor, [University of British Columbia](www.ubc.ca) & [Université Laval](www.ulaval.ca)**
 
-<div>
+My research interests lie in applied ecology, conservation and forecasting of a broad array of ecosystems and species. Specifically, I am interested in using modern quantitative techniques to understand the natural complexity of ecosystems, and ultimately, to allow forecasting of organisms and ecosystem processes. I use a variety of quantitative techniques, including Hierarchical Bayes, Spatial Analysis, Landscape Simulation Modeling, Structural Equation Modeling, and Non-Linear Models to achieve the best ecological inference from ecological data. Through each of the systems I study, I strive to understand the ecological processes and to test this understanding by forecasting.
 
-My research interests lie in applied ecology, conservation and forecasting of a broad array of ecosystems and species.
-Specifically, I am interested in using modern quantitative techniques to understand the natural complexity of ecosystems, and ultimately, to allow forecasting of organisms and ecosystem processes.
-I use a variety of quantitative techniques, including Hierarchical Bayes, Spatial Analysis, Landscape Simulation Modeling, Structural Equation Modeling, and Non-Linear Models to achieve the best ecological inference from ecological data.
-Through each of the systems I study, I strive to understand the ecological processes and to test this understanding by forecasting.
+[SpaDES](https://spades.predictiveecology.org)
 
-</div>
-
-[Predictive Ecology Blog](https://predictiveecology.org/) [Predictive Ecology on GitHub](https://github.com/PredictiveEcology) [SpaDES](https://spades.predictiveecology.org)
+::: 
 
 ### Current Personnel
-
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){width="232"}                                                                                                                                                                                                                                                                                                        | ![Ana Raymundo](https://borealbirds.ca/wp-content/uploads/2022/06/AnaRaymundo-430x524.jpg.webp){width="190"}                                                                                                                                                     |
-|                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                  |
-| [Dr. Tatiane Micheletti](https://github.com/tati-micheletti/) (Postdoctoral Fellow 2018-) Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and tradeoffs/synergies across disciplines. | [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem. |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Isolde Lane Shaw](https://borealbirds.ca/wp-content/uploads/2022/06/Isolde-Lane-Shaw-upscale-2-430x524.jpg.webp){width="190"}                                                                                                                                                                                                                                                              | ![Geneviève Degré-Timmons](https://www.wlu.ca/academics/research/reports/gnwt-report/assets/images/profiles/genevieve-degre-timmons.jpg){width="232"}                                                                                                            |
-|                                                                                                                                                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                  |
-| [Isolde Lane Shaw](https://borealbirds.ualberta.ca/2019/07/11/isolde-lane-shaw/) (PhD Student 2018-)                                                                                                                                                                                                                                                                                         | [Geneviève Degré-Timmons](https://www.researchgate.net/profile/Genevieve-Degre-Timmons) (MSc Student 2021-) Geneviève is working on questions related to lichen and caribou in Northwest Territories. A student at Laval University.                             |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+:::{#current-personnel}
+:::
 
 ### Research Professional
-
-+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Ian Eddy](https://media.licdn.com/dms/image/C5603AQGZ0O9dY7MY6A/profile-displayphoto-shrink_800_800/0/1517441920541?e=2147483647&v=beta&t=TkfotiDMOrioFqtLxJGvHJM2CZ365ZwRU02RtagdXEI){width="232"}                                   |
-|                                                                                                                                                                                                                                         |
-| [Ian Eddy](https://ca.linkedin.com/in/ian-eddy) (Canadian Forest Service \-- Geospatial Scientist 2018 - ) Ian works part time with our team on various topics related to cumulative effects, GIS, SpaDES, modeling and data analytics. |
-+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+:::{#research-professional}
+:::
 
 ### Former Personnel
-
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Ceres Barros](https://i1.rgstatic.net/ii/profile.image/705102948093955-1545121051789_Q512/Ceres_Barros.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | ![Frances Stewart](http://www.stewartresearch.ca/uploads/4/5/7/0/45702893/resized-20190127-151146_orig.jpg){width="412"}                                                                                                                                                                                 |
-|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
-| [Dr. Ceres Barros](https://www.landscapesinmotion.ca/) (Postdoctoral Fellow 2018-2023) Ceres was working on mixed severity spatial fire modeling and the associated vegetation changes that go with it, as part of the [Landscapes in Motion project](https://github.com/tati-micheletti/). She then worked on on ecological forecasting of permafrost, disturbance, and vegetation in Northwest Territories, in a collaboration with the [Forest Ecology Lab](https://www.forestecology.ca/) at Wilfrid Laurier University, as part of the [Northern Water Futures](https://northernwaterfutures.wordpress.com/) project. | [Dr. Frances Stewart](http://www.stewartresearch.ca/) (Postdoctoral Fellow 2019-2021)                                                                                                                                                                                                                    |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Alex Chubaty](https://friresearch.ca/sites/default/files/styles/fri_people_large/public/user-pictures/HLP_2018_07_alex-chubaty-headshot_web.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                            | ![Alana Clason](https://bvcentre.ca/images/made/images/uploads/people_photos/Alana_Clason_200_300.jpg){width="155"}                                                                                                                                                                                      |
-|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
-| [Dr. Alex Chubaty](https://alexchubaty.com) (Postdoctoral Fellow 2017)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | [Dr. Alana Clason](https://bvcentre.ca/index.php/people/bio/alana_clason1) (PhD 2018) Dissertation: Whitebark pine at the northern edge: current constraints and future potential northern distribution under a changing climate. Currently a postdoctoral fellow at the Bulkley Valley Research Centre. |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Sarah Bauduin](https://www.sarahbauduin.fr/wp-content/uploads/2019/08/BauduinSarah_profil.jpg){width="174"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | ![](https://www.wavx.ca/theme/images/faces/jean_marchal.png){width="170"}                                                                                                                                                                                                                                |
-|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
-| [Dr. Sarah Bauduin](https://www.sarahbauduin.fr/) (PhD 2017)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | [Dr. Jean Marchal](https://www.wavx.ca/) (PhD 2017)                                                                                                                                                                                                                                                      |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Sebastien Renard](https://i1.rgstatic.net/ii/profile.image/288757442990080-1445856547205_Q512/Sebastien_Renard2.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | ![Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/_/rsrc/1406753393787/home/Yong.jpg){width="174"}                                                                                                                                                                                            |
-|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
-| [Sebastien Renard](https://www.researchgate.net/profile/Sebastien_Renard2) (PhD Student)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | [Dr. Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/home) (Postdoctoral Fellow 2017)                                                                                                                                                                                                         |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Josh Nowak](https://pbs.twimg.com/profile_images/1030880418554245120/PTIxTrMS_400x400.jpg){width="232"}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | ![Mario van Telgen](https://i1.rgstatic.net/ii/profile.image/426959055396868-1478806379526_Q512/Mario_Van_Telgen.jpg){width="232"}                                                                                                                                                                       |
-|                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
-| [Dr. Josh Nowak](https://www.speedgoat.io/story/) (PhD 2015)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | [Mario van Telgen](https://www.researchgate.net/profile/Mario_Van_Telgen) (PhD)                                                                                                                                                                                                                          |
-+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+:::{#former-personnel}
+:::
 
 #### Prior to 2015
 
